--- a/index.html
+++ b/index.html
@@ -18,17 +18,21 @@
   />
 
   <style>
-    /* -- Base -- */
+    /* — Base — */
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       font-family: 'Poppins', sans-serif;
       background: #f1f5f9;
       color: #1e293b;
       line-height: 1.6;
+      overflow-x: hidden;
     }
-    a { text-decoration: none; }
+    a { text-decoration: none; color: inherit; }
 
-    /* -- Hero with floating icons -- */
+    /* — Blur wrapper — */
+    #content.blur { filter: blur(6px); transition: filter 0.3s ease; }
+
+    /* — Hero with floating icons — */
     .hero {
       position: relative;
       height: 60vh;
@@ -39,87 +43,45 @@
       align-items: center;
       justify-content: center;
     }
-    .hero-bg-icons {
-      position: absolute;
-      inset: 0;
-      z-index: 1;
-      pointer-events: none;
-    }
+    .hero-bg-icons { position: absolute; inset: 0; z-index: 1; pointer-events: none; }
     .hero-bg-icons .icon {
-      position: absolute;
-      font-size: 64px;
-      color: rgba(255,255,255,0.1);
+      position: absolute; font-size: 64px; color: rgba(255,255,255,0.1);
       animation: float 12s ease-in-out infinite;
     }
-    @keyframes float {
-      0%,100% { transform: translateY(0); }
-      50% { transform: translateY(-20px); }
-    }
-    /* position + stagger */
-    .icon:nth-child(1){ top:10%; left:15%; animation-delay:0s; }
-    .icon:nth-child(2){ top:30%; left:80%; animation-delay:2s; }
-    .icon:nth-child(3){ top:60%; left:40%; animation-delay:4s; }
-    .icon:nth-child(4){ top:75%; left:15%; animation-delay:6s; }
-    .icon:nth-child(5){ top:20%; left:50%; animation-delay:8s; }
-    .icon:nth-child(6){ top:45%; left:60%; animation-delay:1s; }
-    .icon:nth-child(7){ top:85%; left:30%; animation-delay:3s; }
-    .icon:nth-child(8){ top:50%; left:10%; animation-delay:5s; }
-    .icon:nth-child(9){ top:10%; left:90%; animation-delay:7s; }
-    .icon:nth-child(10){ top:85%; left:80%; animation-delay:9s; }
-
-    .hero-content {
-      position: relative;
-      z-index: 2;
-      text-align: center;
-      color: #fff;
-    }
-    .hero-content h1 {
-      font-size: 3rem;
-      font-weight: 600;
-    }
+    @keyframes float { 0%,100% { transform: translateY(0); } 50% { transform: translateY(-20px); } }
+    /* icon positions… */
+    .icon:nth-child(1){ top:10%; left:15%; } .icon:nth-child(2){ top:30%; left:80%; }
+    .icon:nth-child(3){ top:60%; left:40%; } .icon:nth-child(4){ top:75%; left:15%; }
+    .icon:nth-child(5){ top:20%; left:50%; } .icon:nth-child(6){ top:45%; left:60%; }
+    .icon:nth-child(7){ top:85%; left:30%; } .icon:nth-child(8){ top:50%; left:10%; }
+    .icon:nth-child(9){ top:10%; left:90%; } .icon:nth-child(10){ top:85%; left:80%; }
+    .hero-content { position: relative; z-index: 2; text-align: center; color: #fff; max-width: 800px; }
+    .hero-content h1 { font-size: 3rem; font-weight: 600; }
     .hero-content h2 {
-      font-size: 1.5rem;
-      font-weight: 300;
-      color: #06b6d4;
-      margin-top: 0.3rem;
+      font-size: 1.5rem; font-weight: 300; color: #06b6d4; margin-top: 0.3rem;
     }
-
-    /* -- About Me Section -- */
-    #about {
-      max-width: 800px;
-      margin: 3rem auto;
-      padding: 0 1rem;
+    /* — About Me under header — */
+    .hero-bio {
+      margin-top: 1.5rem;
+      font-size: 1rem;
+      line-height: 1.6;
       opacity: 0;
-      transform: translateY(50px);
+      transform: translateY(20px);
       transition: opacity 0.6s ease, transform 0.6s ease;
     }
-    #about.active {
+    .hero-bio.active {
       opacity: 1;
       transform: translateY(0);
     }
-    #about h2 {
-      text-align: center;
-      font-size: 2rem;
-      color: #0f172a;
-      margin-bottom: 1rem;
-    }
-    #about p {
-      font-size: 1rem;
-      color: #334155;
-      text-align: center;
-    }
 
-    /* -- Projects Grid -- */
+    /* — Projects Grid — */
     #projects {
       max-width: 1200px;
       margin: 3rem auto;
       padding: 0 1rem;
     }
     #projects h2 {
-      text-align: center;
-      font-size: 2rem;
-      color: #0f172a;
-      margin-bottom: 2rem;
+      text-align: center; font-size: 2rem; color: #0f172a; margin-bottom: 2rem;
     }
     .projects-grid {
       display: grid;
@@ -127,108 +89,151 @@
       gap: 1.5rem;
     }
     .project-card {
-      position: relative;
-      overflow: hidden;
-      border-radius: 8px;
+      position: relative; overflow: hidden; border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       transform: translateY(50px);
       opacity: 0;
-      transition: opacity 0.6s ease, transform 0.6s ease;
+      transition: opacity 0.6s ease, transform 0.6s ease, transform 0.3s ease;
+      cursor: pointer;
     }
     .project-card.active {
       opacity: 1;
       transform: translateY(0);
     }
     .project-card img {
-      width: 100%;
-      display: block;
+      width: 100%; display: block;
+    }
+    .project-card:hover {
+      transform: scale(1.05);
     }
     .project-card .overlay {
-      position: absolute;
-      inset: 0;
+      position: absolute; inset: 0;
       background: rgba(0,0,0,0.4);
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.1rem;
-      opacity: 0;
+      color: #fff; display: flex;
+      align-items: center; justify-content: center;
+      font-size: 1.1rem; opacity: 0;
       transition: opacity 0.3s ease;
     }
     .project-card:hover .overlay {
       opacity: 1;
     }
+
+    /* — Modal — */
+    .modal {
+      position: fixed; inset: 0;
+      background: rgba(0,0,0,0.8);
+      display: flex; align-items: center; justify-content: center;
+      z-index: 1000;
+    }
+    .modal img {
+      max-width: 90%; max-height: 90%; border-radius: 8px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.5);
+    }
+    .close-btn {
+      position: absolute; top: 20px; right: 20px;
+      background: rgba(255,255,255,0.8); border: none;
+      font-size: 1.2rem; padding: 0.4rem 0.8rem;
+      border-radius: 4px; cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    .close-btn:hover {
+      background: rgba(255,255,255,1);
+    }
   </style>
 </head>
 
 <body>
-  <!-- Hero -->
-  <header class="hero">
-    <div class="hero-bg-icons">
-      <i class="fas fa-cogs icon"></i>
-      <i class="fas fa-database icon"></i>
-      <i class="fas fa-layer-group icon"></i>
-      <i class="fas fa-atom icon"></i>
-      <i class="fas fa-code icon"></i>
-      <i class="fas fa-server icon"></i>
-      <i class="fas fa-project-diagram icon"></i>
-      <i class="fas fa-chart-line icon"></i>
-      <i class="fas fa-lock icon"></i>
-      <i class="fas fa-mobile-alt icon"></i>
-    </div>
-    <div class="hero-content">
-      <h1>Ameed Shubietah</h1>
-      <h2>Odoo & Full-Stack Developer</h2>
-    </div>
-  </header>
+  <div id="content">
+    <!-- Hero -->
+    <header class="hero">
+      <div class="hero-bg-icons">
+        <i class="fas fa-cogs icon"></i>
+        <i class="fas fa-database icon"></i>
+        <i class="fas fa-layer-group icon"></i>
+        <i class="fas fa-atom icon"></i>
+        <i class="fas fa-code icon"></i>
+        <i class="fas fa-server icon"></i>
+        <i class="fas fa-project-diagram icon"></i>
+        <i class="fas fa-chart-line icon"></i>
+        <i class="fas fa-lock icon"></i>
+        <i class="fas fa-mobile-alt icon"></i>
+      </div>
+      <div class="hero-content">
+        <h1>Ameed Shubietah</h1>
+        <h2>Odoo & Full-Stack Developer</h2>
+        <p class="hero-bio">
+          Odoo Developer with 2 years of hands-on experience building and customizing modules in Odoo.
+          Solid foundation in Python, PostgreSQL and REST API integrations. Delivered three freelance
+          projects that automated CRM, Sales and Inventory workflows for SMEs, cutting manual data
+          entry by up to 25 %. Quick-learning, detail-oriented and an active contributor on Odoo
+          Community forums. Fluent in Arabic & English; open to both remote and on-premise jobs.
+        </p>
+      </div>
+    </header>
 
-  <!-- About Me -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>
-      I’m an Odoo Developer with 2 years of hands-on experience building
-      & customizing modules. Strong Python, PostgreSQL & REST API skills.
-      Delivered 3 freelance ERP projects, cutting manual data entry by 25 %.
-      Detail-oriented, quick-learner, active Odoo community contributor.
-      Fluent Arabic & English.
-    </p>
-  </section>
+    <!-- Projects -->
+    <section id="projects">
+      <h2>My Projects</h2>
+      <div class="projects-grid"></div>
+    </section>
+  </div>
 
-  <!-- Projects -->
-  <!-- Projects -->
-<section id="projects">
-  <h2>My Projects</h2>
-  <div class="projects-grid"></div>
-</section>
-
+  <!-- Modal container -->
+  <div id="modal-root"></div>
 
   <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    // 1) generate 8 project-cards
-    const grid = document.querySelector('.projects-grid');
-    grid.innerHTML = Array.from({ length: 8 }, (_, i) => `
-      <a href="images/${i+1}.jpeg" class="project-card" target="_blank">
-        <img src="images/${i+1}.jpeg" alt="Project ${i+1}">
-        <div class="overlay">
-          <i class="fas fa-search-plus"></i>&nbsp;Preview
+    document.addEventListener('DOMContentLoaded', () => {
+      // 1) Reveal hero-bio
+      const bio = document.querySelector('.hero-bio');
+      setTimeout(() => bio.classList.add('active'), 400);
+
+      // 2) Generate 8 project cards
+      const grid = document.querySelector('.projects-grid');
+      grid.innerHTML = Array.from({ length: 8 }, (_, i) => `
+        <div class="project-card" data-src="images/${i+1}.jpeg">
+          <img src="images/${i+1}.jpeg" alt="Project ${i+1}">
+          <div class="overlay">
+            <i class="fas fa-search-plus"></i>&nbsp;Preview
+          </div>
         </div>
-      </a>
-    `).join('');
+      `).join('');
 
-    // 2) observe them for the scroll-in animation
-    const io = new IntersectionObserver((entries, obs) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('active');
-          obs.unobserve(entry.target);
-        }
+      // 3) IntersectionObserver for scroll-in
+      const io = new IntersectionObserver((entries, obs) => {
+        entries.forEach(e => {
+          if (e.isIntersecting) {
+            e.target.classList.add('active');
+            obs.unobserve(e.target);
+          }
+        });
+      }, { threshold: 0.2 });
+      document.querySelectorAll('.project-card').forEach(c => io.observe(c));
+
+      // 4) Click to open modal
+      const content = document.getElementById('content');
+      const modalRoot = document.getElementById('modal-root');
+
+      grid.addEventListener('click', e => {
+        const card = e.target.closest('.project-card');
+        if (!card) return;
+        const src = card.dataset.src;
+        // blur background
+        content.classList.add('blur');
+        // build modal
+        const modal = document.createElement('div');
+        modal.className = 'modal';
+        modal.innerHTML = `
+          <button class="close-btn">&times;</button>
+          <img src="${src}" alt="Preview">
+        `;
+        modalRoot.appendChild(modal);
+        // close handler
+        modal.querySelector('.close-btn').onclick = () => {
+          content.classList.remove('blur');
+          modalRoot.innerHTML = '';
+        };
       });
-    }, { threshold: 0.2 });
-
-    document.querySelectorAll('.project-card')
-            .forEach(card => io.observe(card));
-  });
-</script>
-
+    });
+  </script>
 </body>
 </html>
