--- a/index.html
+++ b/index.html
@@ -32,33 +32,36 @@
     /* — Blur wrapper — */
     #content.blur { filter: blur(6px); transition: filter 0.3s ease; }
 
-    /* — Hero with floating icons — */
+    /* — Hero with video background — */
     .hero {
       position: relative;
       height: 60vh;
       min-height: 400px;
-      background: #0f172a;
       overflow: hidden;
       display: flex;
       align-items: center;
       justify-content: center;
     }
-    .hero-bg-icons { position: absolute; inset: 0; z-index: 1; pointer-events: none; }
-    .hero-bg-icons .icon {
-      position: absolute; font-size: 64px; color: rgba(255,255,255,0.1);
-      animation: float 12s ease-in-out infinite;
+    .hero-video {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      object-fit: cover;
+      z-index: 1;
+      filter: brightness(0.5);
     }
-    @keyframes float { 0%,100% { transform: translateY(0); } 50% { transform: translateY(-20px); } }
-    /* icon positions… */
-    .icon:nth-child(1){ top:10%; left:15%; } .icon:nth-child(2){ top:30%; left:80%; }
-    .icon:nth-child(3){ top:60%; left:40%; } .icon:nth-child(4){ top:75%; left:15%; }
-    .icon:nth-child(5){ top:20%; left:50%; } .icon:nth-child(6){ top:45%; left:60%; }
-    .icon:nth-child(7){ top:85%; left:30%; } .icon:nth-child(8){ top:50%; left:10%; }
-    .icon:nth-child(9){ top:10%; left:90%; } .icon:nth-child(10){ top:85%; left:80%; }
-    .hero-content { position: relative; z-index: 2; text-align: center; color: #fff; max-width: 800px; }
+    .hero-content {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+      color: #fff;
+      max-width: 800px;
+      padding: 0 1rem;
+    }
     .hero-content h1 { font-size: 3rem; font-weight: 600; }
     .hero-content h2 {
-      font-size: 1.5rem; font-weight: 300; color: #06b6d4; margin-top: 0.3rem;
+      font-size: 1.5rem; font-weight: 300;
+      color: #06b6d4; margin-top: .3rem;
     }
     /* — About Me under header — */
     .hero-bio {
@@ -67,78 +70,99 @@
       line-height: 1.6;
       opacity: 0;
       transform: translateY(20px);
-      transition: opacity 0.6s ease, transform 0.6s ease;
+      transition: opacity .6s ease, transform .6s ease;
     }
     .hero-bio.active {
       opacity: 1;
       transform: translateY(0);
     }
 
-    /* — Projects Grid — */
+    /* — Projects Section — */
     #projects {
+      position: relative;
       max-width: 1200px;
       margin: 3rem auto;
       padding: 0 1rem;
     }
+    /* pinned icon */
     #projects h2 {
-      text-align: center; font-size: 2rem; color: #0f172a; margin-bottom: 2rem;
+      text-align: center; font-size: 2rem; color: #0f172a;
+      margin-bottom: 2rem;
     }
+    #projects h2 .pinned-icon {
+      color: #06b6d4;
+      margin-left: .5rem;
+      transform: rotate(-20deg);
+    }
+    .projects-bg-icons {
+      position: absolute;
+      inset: 0;
+      z-index: 1;
+      pointer-events: none;
+    }
+    .projects-bg-icons .icon {
+      position: absolute;
+      font-size: 48px;
+      color: rgba(6,182,212,0.1);
+      animation: float 15s ease-in-out infinite;
+    }
+    /* few sample positions */
+    .projects-bg-icons .icon:nth-child(1){ top:10%; left:20%; }
+    .projects-bg-icons .icon:nth-child(2){ top:40%; left:80%; }
+    .projects-bg-icons .icon:nth-child(3){ top:75%; left:30%; }
+    .projects-bg-icons .icon:nth-child(4){ top:60%; left:60%; }
+
+    /* — Projects Grid & Cards — */
     .projects-grid {
+      position: relative;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 1.5rem;
+      z-index: 2;
     }
     .project-card {
       position: relative; overflow: hidden; border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,.1);
       transform: translateY(50px);
       opacity: 0;
-      transition: opacity 0.6s ease, transform 0.6s ease, transform 0.3s ease;
+      transition: opacity .6s ease, transform .6s ease, transform .3s ease;
       cursor: pointer;
     }
     .project-card.active {
       opacity: 1;
       transform: translateY(0);
     }
-    .project-card img {
-      width: 100%; display: block;
-    }
-    .project-card:hover {
-      transform: scale(1.05);
-    }
+    .project-card img { width: 100%; display: block; }
+    .project-card:hover { transform: scale(1.05); }
     .project-card .overlay {
       position: absolute; inset: 0;
-      background: rgba(0,0,0,0.4);
+      background: rgba(0,0,0,.4);
       color: #fff; display: flex;
       align-items: center; justify-content: center;
       font-size: 1.1rem; opacity: 0;
-      transition: opacity 0.3s ease;
+      transition: opacity .3s ease;
     }
-    .project-card:hover .overlay {
-      opacity: 1;
-    }
+    .project-card:hover .overlay { opacity: 1; }
 
     /* — Modal — */
     .modal {
       position: fixed; inset: 0;
-      background: rgba(0,0,0,0.8);
+      background: rgba(0,0,0,.8);
       display: flex; align-items: center; justify-content: center;
       z-index: 1000;
     }
     .modal img {
       max-width: 90%; max-height: 90%; border-radius: 8px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.5);
+      box-shadow: 0 8px 24px rgba(0,0,0,.5);
     }
     .close-btn {
       position: absolute; top: 20px; right: 20px;
-      background: rgba(255,255,255,0.8); border: none;
-      font-size: 1.2rem; padding: 0.4rem 0.8rem;
+      background: rgba(255,255,255,.8); border: none;
+      font-size: 1.2rem; padding: .4rem .8rem;
       border-radius: 4px; cursor: pointer;
-      transition: background 0.3s ease;
+      transition: background .3s ease;
     }
-    .close-btn:hover {
-      background: rgba(255,255,255,1);
-    }
+    .close-btn:hover { background: rgba(255,255,255,1); }
   </style>
 </head>
 
@@ -146,18 +170,10 @@
   <div id="content">
     <!-- Hero -->
     <header class="hero">
-      <div class="hero-bg-icons">
-        <i class="fas fa-cogs icon"></i>
-        <i class="fas fa-database icon"></i>
-        <i class="fas fa-layer-group icon"></i>
-        <i class="fas fa-atom icon"></i>
-        <i class="fas fa-code icon"></i>
-        <i class="fas fa-server icon"></i>
-        <i class="fas fa-project-diagram icon"></i>
-        <i class="fas fa-chart-line icon"></i>
-        <i class="fas fa-lock icon"></i>
-        <i class="fas fa-mobile-alt icon"></i>
-      </div>
+      <video class="hero-video" autoplay muted loop>
+        <source src="videos/programming.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+      </video>
       <div class="hero-content">
         <h1>Ameed Shubietah</h1>
         <h2>Odoo & Full-Stack Developer</h2>
@@ -173,21 +189,29 @@
 
     <!-- Projects -->
     <section id="projects">
-      <h2>My Projects</h2>
+      <h2>
+        My Projects
+        <i class="fas fa-thumbtack pinned-icon"></i>
+      </h2>
+      <div class="projects-bg-icons">
+        <i class="fas fa-cubes icon"></i>
+        <i class="fas fa-database icon"></i>
+        <i class="fas fa-cog icon"></i>
+        <i class="fas fa-warehouse icon"></i>
+      </div>
       <div class="projects-grid"></div>
     </section>
   </div>
 
-  <!-- Modal container -->
+  <!-- Modal root -->
   <div id="modal-root"></div>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       // 1) Reveal hero-bio
-      const bio = document.querySelector('.hero-bio');
-      setTimeout(() => bio.classList.add('active'), 400);
+      setTimeout(()=> document.querySelector('.hero-bio').classList.add('active'), 400);
 
-      // 2) Generate 8 project cards
+      // 2) Generate project cards
       const grid = document.querySelector('.projects-grid');
       grid.innerHTML = Array.from({ length: 8 }, (_, i) => `
         <div class="project-card" data-src="images/${i+1}.jpeg">
@@ -198,7 +222,7 @@
         </div>
       `).join('');
 
-      // 3) IntersectionObserver for scroll-in
+      // 3) Scroll-in animation
       const io = new IntersectionObserver((entries, obs) => {
         entries.forEach(e => {
           if (e.isIntersecting) {
@@ -209,17 +233,15 @@
       }, { threshold: 0.2 });
       document.querySelectorAll('.project-card').forEach(c => io.observe(c));
 
-      // 4) Click to open modal
-      const content = document.getElementById('content');
-      const modalRoot = document.getElementById('modal-root');
+      // 4) Modal logic
+      const content = document.getElementById('content'),
+            modalRoot = document.getElementById('modal-root');
 
       grid.addEventListener('click', e => {
         const card = e.target.closest('.project-card');
         if (!card) return;
         const src = card.dataset.src;
-        // blur background
         content.classList.add('blur');
-        // build modal
         const modal = document.createElement('div');
         modal.className = 'modal';
         modal.innerHTML = `
@@ -227,7 +249,6 @@
           <img src="${src}" alt="Preview">
         `;
         modalRoot.appendChild(modal);
-        // close handler
         modal.querySelector('.close-btn').onclick = () => {
           content.classList.remove('blur');
           modalRoot.innerHTML = '';
