--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       opacity: 1;
     }
 
-    /* — Modal — */
+    /* — Modal & Modal Swiper — */
     .modal {
       position: fixed;
       inset: 0;
@@ -176,12 +176,27 @@
       align-items: center;
       justify-content: center;
       z-index: 1000;
+      padding: 1rem;
     }
-    .modal img {
-      max-width: 90%;
-      max-height: 90%;
+    .modal-swiper {
+      width: 80%;
+      height: 80%;
+    }
+    .modal-swiper .swiper-slide {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .modal-swiper .swiper-slide img {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
       border-radius: 8px;
       box-shadow: 0 8px 24px rgba(0,0,0,0.5);
+    }
+    .swiper-button-prev,
+    .swiper-button-next {
+      color: #fff;
     }
     .close-btn {
       position: absolute;
@@ -194,6 +209,7 @@
       border-radius: 4px;
       cursor: pointer;
       transition: background 0.3s ease;
+      z-index: 1100;
     }
     .close-btn:hover {
       background: rgba(255,255,255,1);
@@ -230,7 +246,8 @@
     <!-- Projects -->
     <section id="projects">
       <h2>
-        <i class="fas fa-thumbtack pinned-icon"></i> My Projects
+        My Projects
+        <i class="fas fa-thumbtack pinned-icon"></i>
       </h2>
       <div class="projects-grid"></div>
     </section>
@@ -243,7 +260,7 @@
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      // Initialize Swiper with mouse drag
+      // 1) Initialize hero swiper with dragging
       new Swiper('.hero-swiper', {
         loop: true,
         autoplay: { delay: 3000, disableOnInteraction: false },
@@ -252,21 +269,33 @@
         slidesPerView: 1
       });
 
-      // Reveal hero-bio
+      // 2) Reveal hero-bio
       setTimeout(() => document.querySelector('.hero-bio').classList.add('active'), 400);
 
-      // Generate project cards
+      // 3) Generate 9 project cards
       const grid = document.querySelector('.projects-grid');
-      grid.innerHTML = Array.from({ length: 8 }, (_, i) => `
-        <div class="project-card" data-src="images/${i+1}.jpeg">
-          <img src="images/${i+1}.jpeg" alt="Project ${i+1}">
-          <div class="overlay">
-            <i class="fas fa-search-plus"></i>&nbsp;Preview
-          </div>
-        </div>
-      `).join('');
+      grid.innerHTML = Array.from({ length: 9 }, (_, i) => {
+        if (i < 8) {
+          return `
+            <div class="project-card" data-src="images/${i+1}.jpeg">
+              <img src="images/${i+1}.jpeg" alt="Project ${i+1}">
+              <div class="overlay">
+                <i class="fas fa-search-plus"></i>&nbsp;Preview
+              </div>
+            </div>`;
+        } else {
+          // ninth card with two images
+          return `
+            <div class="project-card" data-srcs="images/9.png,images/10.png">
+              <img src="images/9.png" alt="Project 9">
+              <div class="overlay">
+                <i class="fas fa-search-plus"></i>&nbsp;Preview Slides
+              </div>
+            </div>`;
+        }
+      }).join('');
 
-      // Animate projects header
+      // 4) Animate projects header
       const projTitle = document.querySelector('#projects h2');
       new IntersectionObserver((entries, obs) => {
         entries.forEach(e => {
@@ -277,7 +306,7 @@
         });
       }, { threshold: 0.3 }).observe(projTitle);
 
-      // Animate cards on scroll
+      // 5) Animate cards on scroll
       const io = new IntersectionObserver((entries, obs) => {
         entries.forEach(e => {
           if (e.isIntersecting) {
@@ -288,21 +317,50 @@
       }, { threshold: 0.2 });
       document.querySelectorAll('.project-card').forEach(c => io.observe(c));
 
-      // Modal logic
+      // 6) Modal logic with single vs multi
       const content = document.getElementById('content'),
             modalRoot = document.getElementById('modal-root');
+
       grid.addEventListener('click', e => {
         const card = e.target.closest('.project-card');
         if (!card) return;
+
         content.classList.add('blur');
-        const src = card.dataset.src;
+        const srcs = (card.dataset.srcs || card.dataset.src).split(',');
         const modal = document.createElement('div');
         modal.className = 'modal';
-        modal.innerHTML = `
-          <button class="close-btn">&times;</button>
-          <img src="${src}" alt="Preview">
-        `;
-        modalRoot.appendChild(modal);
+
+        if (srcs.length === 1) {
+          modal.innerHTML = `
+            <button class="close-btn">&times;</button>
+            <img src="${srcs[0]}" alt="Preview">
+          `;
+          modalRoot.appendChild(modal);
+        } else {
+          // multi-image swiper
+          modal.innerHTML = `
+            <button class="close-btn">&times;</button>
+            <div class="modal-swiper swiper-container">
+              <div class="swiper-wrapper">
+                ${srcs.map(s => `
+                  <div class="swiper-slide"><img src="${s.trim()}" alt="Slide"></div>
+                `).join('')}
+              </div>
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
+            </div>`;
+          modalRoot.appendChild(modal);
+          // init modal swiper
+          new Swiper('.modal-swiper', {
+            loop: true,
+            navigation: {
+              nextEl: '.swiper-button-next',
+              prevEl: '.swiper-button-prev'
+            }
+          });
+        }
+
+        // close handler
         modal.querySelector('.close-btn').onclick = () => {
           content.classList.remove('blur');
           modalRoot.innerHTML = '';
